[gd_scene load_steps=2 format=3 uid="uid://b5myvjikpkkoe"]

[ext_resource type="Script" path="res://Filter.gd" id="1_187uu"]

[node name="Filter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_187uu")

[node name="HSlider" type="HSlider" parent="."]
self_modulate = Color(0.239216, 0.423529, 0.909804, 1)
layout_mode = 0
offset_left = 229.0
offset_top = 5.0
offset_right = 725.0
offset_bottom = 55.0
step = 0.01
value = 50.0
allow_greater = true
allow_lesser = true
tick_count = 11
ticks_on_borders = true

[node name="ValueBox" type="Button" parent="HSlider"]
layout_mode = 0
offset_left = 502.0
offset_top = 6.0
offset_right = 589.0
offset_bottom = 49.0
disabled = true

[node name="NameBox" type="Button" parent="HSlider"]
layout_mode = 0
offset_left = -204.0
offset_top = 2.0
offset_right = -39.0
offset_bottom = 49.0
disabled = true

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 22.0
offset_right = 876.0
offset_bottom = 46.0
button_pressed = true

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
